src/qmlcompiler/qqmljsshadowcheck.cpp
@@ -43,6 +43,9 @@ void QQmlJSShadowCheck::run(
     m_error = error;
     m_state = initialState(function);
     decode(m_function->code.constData(), static_cast<uint>(m_function->code.size()));
+
+    for (const auto &store : m_resettableStores)
+        checkResettable(store.accumulatorIn, store.instructionOffset);
 }
 
 void QQmlJSShadowCheck::generate_LoadProperty(int nameIndex)
@@ -70,15 +73,37 @@ void QQmlJSShadowCheck::generate_GetLookup(int index)
     }
 }
 
+void QQmlJSShadowCheck::handleStore(int base, const QString &memberName)
+{
+    const int instructionOffset = currentInstructionOffset();
+    const QQmlJSRegisterContent &readAccumulator
+            = (*m_annotations)[instructionOffset].readRegisters[Accumulator].content;
+
+    // If the accumulator is already read as var, we don't have to do anything.
+    if (m_typeResolver->registerContains(readAccumulator, m_typeResolver->varType()))
+        return;
+
+    const auto baseType = m_state.registers[base].content;
+    if (checkShadowing(baseType, memberName, base) == Shadowable)
+        return;
+
+    // If the property isn't shadowable but resettable, we have to turn the read register into
+    // var if the accumulator can hold undefined. This has to be done in a second pass
+    // because the accumulator may still turn into var due to its own shadowing.
+    const QQmlJSRegisterContent member = m_typeResolver->memberType(baseType, memberName);
+    if (member.isProperty() && !member.property().reset().isEmpty())
+        m_resettableStores.append({m_state.accumulatorIn(), instructionOffset});
+}
+
+
 void QQmlJSShadowCheck::generate_StoreProperty(int nameIndex, int base)
 {
-    checkShadowing(
-            m_state.registers[base].content, m_jsUnitGenerator->stringForIndex(nameIndex), base);
+    handleStore(base, m_jsUnitGenerator->stringForIndex(nameIndex));
 }
 
 void QQmlJSShadowCheck::generate_SetLookup(int index, int base)
 {
-    checkShadowing(m_state.registers[base].content, m_jsUnitGenerator->lookupName(index), base);
+    handleStore(base, m_jsUnitGenerator->lookupName(index));
 }
 
 void QQmlJSShadowCheck::generate_CallProperty(int nameIndex, int base, int argc, int argv)
@@ -107,11 +132,11 @@ void QQmlJSShadowCheck::endInstruction(QV4::Moth::Instr::Type)
 {
 }
 
-void QQmlJSShadowCheck::checkShadowing(
+QQmlJSShadowCheck::Shadowability QQmlJSShadowCheck::checkShadowing(
         const QQmlJSRegisterContent &baseType, const QString &memberName, int baseRegister)
 {
     if (baseType.storedType()->accessSemantics() != QQmlJSScope::AccessSemantics::Reference)
-        return;
+        return NotShadowable;
 
     switch (baseType.variant()) {
     case QQmlJSRegisterContent::ExtensionObjectProperty:
@@ -128,14 +153,14 @@ void QQmlJSShadowCheck::checkShadowing(
         // those are not shadowable.
         if (!member.isValid()) {
             Q_ASSERT(m_typeResolver->isPrefix(memberName));
-            return;
+            return NotShadowable;
         }
 
         if (member.isProperty()) {
             if (member.property().isFinal())
-                return; // final properties can't be shadowed
+                return NotShadowable; // final properties can't be shadowed
         } else if (!member.isMethod()) {
-            return; // Only properties and methods can be shadowed
+            return NotShadowable; // Only properties and methods can be shadowed
         }
 
         m_logger->log(
@@ -160,15 +185,33 @@ void QQmlJSShadowCheck::checkShadowing(
             if (it.key() != baseRegister)
                 it->second.content = m_typeResolver->convert(it->second.content, varContent);
         }
-
-        return;
+        return Shadowable;
     }
     default:
         // In particular ObjectById is fine as that cannot change into something else
         // Singleton should also be fine, unless the factory function creates an object
         // with different property types than the declared class.
-        return;
+        return NotShadowable;
     }
+}
+
+void QQmlJSShadowCheck::checkResettable(
+        const QQmlJSRegisterContent &accumulatorIn, int instructionOffset)
+{
+    const QQmlJSScope::ConstPtr varType = m_typeResolver->varType();
+
+    // The stored type is not necessarily updated by the shadow check, but it
+    // will be in the basic blocks pass. For the purpose of adjusting newly
+    // shadowable types we can ignore it. We only want to know if any of the
+    // contents can hold undefined.
+    if (!m_typeResolver->canHoldUndefined(accumulatorIn.storedIn(varType)))
+        return;
+
+    const QQmlJSRegisterContent varContent = m_typeResolver->globalType(varType);
+
+    QQmlJSRegisterContent &readAccumulator
+            = (*m_annotations)[instructionOffset].readRegisters[Accumulator].content;
+    readAccumulator = m_typeResolver->convert(readAccumulator, varContent);
 }
 
 QT_END_NAMESPACE
